added  templates for homepage and product page

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -9,20 +9,21 @@
 <div class="row">
 
   <!-- do something like this for every product -->
-  {%for product in allproducts%}
+   {% for product in allproducts %}
     <div class="col-6 col-md-4 col-lg-3">
-        <a href="/products/{{product.id}}">
+        <a href="/products/{{ product.id }}">
             <div class="card">
-                <img class="card-img-top ProductList-img" src="{{product.image}}" alt="{{product.name}}">
+                <img class="card-img-top ProductList-img" 
+                    src="{{ product.image }}" alt="{{ product.name }}">
                 <div class="card-body">
                     <h5 class="card-title">
-                        {{product.name}}
+                        {{ product.name }}
                     </h5>
                 </div>
             </div>
         </a>
     </div>
-    {%endfor%}
+    {% endfor %}
   
 
 
