--- a/templates/product.html
+++ b/templates/product.html
@@ -5,16 +5,17 @@
 {% block content %}
 
 <div>
-  <img class="float-right w-25" src="{{product.image}}">
-  <h1>{{product.name}}</h1>
-  <p class="lead">{{product.description}}</p>
-  <p>Price: ${{product.price}}</p>
+  <img class="float-right w-25" src="{{ product.image }}">
+  <h1>{{ product.name }}</h1>
+  <p class="lead">{{ product.description }}</p>
+  <p>Price: ${{ product.price }}</p>
 
 <form action="/add-to-cart" method="POST">
-<input type="hidden" name="product-id" value={{product.id}}>
+<input type="hidden" name="product-id" value={{ product.id }}>
   <button class="btn btn-primary">Add To Cart</button>
 </form>
 
 </div>
 
 {% endblock %}}
+<!-- {{ "${:,.2f}".format(product.price) }} -->
